# clifford-qubit

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml
src/: error.rs  lib.rs  matrix_testing.rs  qubit.rs  qubit_array.rs  qubit_display.rs  simulator.rs
src/gates/: matrix_testing.rs  mod.rs
src/gates/single/: mod.rs  pauli.rs  rotation.rs
tests/: matrix_testing.rs  simulator.rs
