[package]
name = "clifford-qubit"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
authors = ["Michael Nelson <absoludity@gmail.com>"]
description = "A qubit implementation using Clifford algebra for quantum computing simulations"
license = "MIT OR Apache-2.0"
keywords = ["clifford", "qubit", "quantum"]

[features]
default = []
optimized = []
dev-tools = []

[dependencies]
clifford-3-even = "0.1.2"
num = "0.4.1"

[dev-dependencies]
rstest = "0.18.2"
